Fixed AccountList and lastupdate column

--- a/src/lang/messages_de_DE.properties
+++ b/src/lang/messages_de_DE.properties
@@ -19,6 +19,8 @@ Add\ new\ task\ within\ this\ project = Neue Aufgabe in diesem Projekt anlegen
 
 Are\ you\ sure? = Sind Sie sicher?
 
+Available\ Accounts = Vorhandene Zug\u00E4nge
+
 Choose\ a\ project = Bitte w\u00E4hlen Sie ein Projekt
 
 Choose\ a\ start\ date = Startsatum
@@ -93,7 +95,9 @@ Local\ path = Lokaler Pfad
 
 Name = Name
 
-New... = Neu...
+New\ account... = Neuer Zugang...
+
+New...         = Neu...
 
 Open\ document = Dokument \u00F6ffnen
 
