--- a/src/lang/messages_de_DE.properties
+++ b/src/lang/messages_de_DE.properties
@@ -13,10 +13,6 @@ Account = Zugang
 
 Accounts = Zug\u00E4nge
 
-Add\ Task... = Neue Aufgabe...
-
-Add\ new\ task\ within\ this\ project = Neue Aufgabe in diesem Projekt anlegen
-
 Are\ you\ sure? = Sind Sie sicher?
 
 Available\ Accounts = Vorhandene Zug\u00E4nge
@@ -32,12 +28,6 @@ Choose\ the\ accounts\ to\ be\ synchronized = W\u00E4hlen Sie die abzurufenden K
 Close = Schlie\u00DFen
 
 Comment = Kommentar
-
-Create\ a\ new\ Task = Neue Aufgabe anlegen
-
-Create\ a\ new\ project = Neues Projekt erstellen
-
-Create\ new\ project = Neues Projekt anlegen
 
 Created\ on = Erstellt am
 
@@ -63,23 +53,7 @@ Documents\ last\ updated\ on = Dokumente aktualisiert am
 
 Downloaded\ on = Geladen am
 
-Duplicate\ Task = Aufgabe duplizieren
-
-Duplicate...   = Duplizieren...
-
-Effort = Aufwand
-
-Efforts = Aufw\u00E4nde
-
-Efforts\: = Aufw\u00E4nde:
-
 End\ date = Fertigstellungsdatum
-
-Example\ Plugin = Beispiel Plugin
-
-Example\ plugin = Beispiel-Plugin
-
-Existing\ projects = Existierende Projekte
 
 Filter\ view = Anzeige einschr\u00E4nken
 
@@ -93,35 +67,25 @@ Load\ documents = Dokumente laden
 
 Local\ path = Lokaler Pfad
 
+Mark\ as\ read = Als gelesen markieren
+
+Mark\ as\ unread = Als ungelesen markieren
+
 Name = Name
 
 New\ account... = Neuer Zugang...
 
-New...         = Neu...
+New\ document... = Neues Dokument...
+
+New...          = Neu...
 
 Open\ document = Dokument \u00F6ffnen
 
 Open...       = \u00D6ffnen...
 
-Please\ enter\ a\ project\ name = Bitte geben Sie einen Namen f\u00FCr das Projekt an
-
-Please\ enter\ a\ task\ name = Bitte geben Sie einen Namen f\u00FCr die Aufgabe an
-
-Please\ store\ the\ project\ first = Bitte speichern Sie zun\u00E4chst das Projekt
-
 Price = Preis
 
 Project = Projekt
-
-Project\ deleted\ successfully = Projekt gel\u00F6scht
-
-Project\ details = Projekt-Details
-
-Project\ name = name des Projekts
-
-Project\ stored\ successfully = Projekt gespeichert
-
-Projects = Projekte
 
 Read\ on = Gelesen am
 
@@ -134,18 +98,6 @@ Start\ date = Start-Datum
 Store = Speichern
 
 Summary = Summe
-
-Task\ deleted\ successfully = Aufgabe gel\u00F6scht
-
-Task\ details = Aufgabendetails
-
-Task\ name = Name der Aufgabe
-
-Task\ stored\ successfully = Aufgabe gespeichert
-
-Tasks = Aufgaben
-
-Tasks\ within\ this\ project = Neue Aufgabe in diesem Projekt
 
 User = Benutzer
 
