Fixed some translations

--- a/src/lang/messages_de_DE.properties
+++ b/src/lang/messages_de_DE.properties
@@ -11,6 +11,8 @@ About... = About...
 
 Account = Zugang
 
+Account\ details = Details zum Zugang
+
 Accounts = Zug\u00E4nge
 
 Are\ you\ sure? = Sind Sie sicher?
@@ -53,6 +55,8 @@ Documents\ last\ updated\ on = Dokumente aktualisiert am
 
 Downloaded\ on = Geladen am
 
+Edit = Bearbeiten
+
 End\ date = Fertigstellungsdatum
 
 Filter\ view = Anzeige einschr\u00E4nken
@@ -93,9 +97,13 @@ Refresh = Aktualisieren
 
 Remote\ folder = Ordner
 
+Show\ only\ unread\ documents = Nur ungelesene Dokumente anzeigen
+
 Start\ date = Start-Datum
 
 Store = Speichern
+
+Store\ documents\ in = Ablagepfad
 
 Summary = Summe
 
