Message an hibiscus.ibankstatement nach Laden eines Dokuments. Deka-Login-Fehler bei falscher Kontonummer oder PIN abgefangen.

--- a/src/lang/messages_de_DE.properties
+++ b/src/lang/messages_de_DE.properties
@@ -41,7 +41,7 @@ Description = Beschreibung
 
 Details = Details
 
-Do\ you\ really\ want\ to\ delete\ this\ project?\ All\ assigned\ tasks\ will\ be\ deleted\ too. = M\u00F6chten Sie dieses Projekt wirklich l\u00F6schen? Alle enthaltenen Aufgaben werden ebenfalls gel\u00F6scht.
+Do\ you\ really\ want\ to\ delete\ this\ document?\ The\ file\ on\ disk\ will\ be\ deleted\ as\ well. = M\u00F6chten Sie dieses Dokument wirklich l\u00F6schen? Die gespeicherte Datei wird ebenfalls gel\u00F6scht.
 
 Do\ you\ really\ want\ to\ delete\ this\ task? = M\u00F6chten Sie diese Aufgabe wirklich l\u00F6schen?
 
@@ -83,9 +83,9 @@ New\ document... = Neues Dokument...
 
 New...          = Neu...
 
-Open\ document = Dokument \u00F6ffnen
+Open = \u00D6ffnen
 
-Open...       = \u00D6ffnen...
+Open... = \u00D6ffnen...
 
 Price = Preis
 
