Added support for Baader Bank

--- a/src/lang/messages_de_DE.properties
+++ b/src/lang/messages_de_DE.properties
@@ -13,6 +13,8 @@ Account = Zugang
 
 Account\ details = Details zum Zugang
 
+Account\ stored\ successfully = Zugang gespeichert
+
 Accounts = Zug\u00E4nge
 
 Are\ you\ sure? = Sind Sie sicher?
@@ -44,6 +46,8 @@ Details = Details
 Do\ you\ really\ want\ to\ delete\ this\ document?\ The\ file\ on\ disk\ will\ be\ deleted\ as\ well. = M\u00F6chten Sie dieses Dokument wirklich l\u00F6schen? Die gespeicherte Datei wird ebenfalls gel\u00F6scht.
 
 Do\ you\ really\ want\ to\ delete\ this\ task? = M\u00F6chten Sie diese Aufgabe wirklich l\u00F6schen?
+
+Document\ deleted = Dokument wurde gel\u00F6scht
 
 Document\ details = Details zum Dokument
 
