Update für Anpassung an Mashup 0.9.30

--- a/src/lang/messages_de_DE.properties
+++ b/src/lang/messages_de_DE.properties
@@ -89,7 +89,9 @@ New...          = Neu...
 
 Open = \u00D6ffnen
 
-Open... = \u00D6ffnen...
+Open\ document = Dokument \u00F6ffnen
+
+Open...       = \u00D6ffnen...
 
 Price = Preis
 
